move to J2SE-1.5