@@ -12,9 +12,9 @@ public class jnamed {
 static final int FLAG_DNSSECOK = 1;
 static final int FLAG_SIGONLY = 2;
 
-Map caches;
-Map znames;
-Map TSIGs;
+Map<Integer, Cache> caches;
+Map<Name, Zone> znames;
+Map<Name, TSIG> TSIGs;
 
 private static String
 addrport(InetAddress addr, int port) {
@@ -26,8 +26,8 @@ jnamed(String conffile) throws IOException, ZoneTransferException {
 	FileInputStream fs;
 	InputStreamReader isr;
 	BufferedReader br;
-	List ports = new ArrayList();
-	List addresses = new ArrayList();
+	List<Integer> ports = new ArrayList<Integer>();
+	List<InetAddress> addresses = new ArrayList<InetAddress>();
 	try {
 		fs = new FileInputStream(conffile);
 		isr = new InputStreamReader(fs);
@@ -39,9 +39,9 @@ jnamed(String conffile) throws IOException, ZoneTransferException {
 	}
 
 	try {
-		caches = new HashMap();
-		znames = new HashMap();
-		TSIGs = new HashMap();
+		caches = new HashMap<Integer, Cache>();
+		znames = new HashMap<Name, Zone>();
+		TSIGs = new HashMap<Name, TSIG>();
 
 		String line = null;
 		while ((line = br.readLine()) != null) {
@@ -62,7 +62,7 @@ jnamed(String conffile) throws IOException, ZoneTransferException {
 						 st.nextToken());
 			else if (keyword.equals("cache")) {
 				Cache cache = new Cache(st.nextToken());
-				caches.put(new Integer(DClass.IN), cache);
+				caches.put(Integer.valueOf(DClass.IN), cache);
 			} else if (keyword.equals("key")) {
 				String s1 = st.nextToken();
 				String s2 = st.nextToken();
@@ -83,17 +83,17 @@ jnamed(String conffile) throws IOException, ZoneTransferException {
 		}
 
 		if (ports.size() == 0)
-			ports.add(new Integer(53));
+			ports.add(Integer.valueOf(53));
 
 		if (addresses.size() == 0)
 			addresses.add(Address.getByAddress("0.0.0.0"));
 
-		Iterator iaddr = addresses.iterator();
+		Iterator<InetAddress> iaddr = addresses.iterator();
 		while (iaddr.hasNext()) {
-			InetAddress addr = (InetAddress) iaddr.next();
-			Iterator iport = ports.iterator();
+			InetAddress addr = iaddr.next();
+			Iterator<Integer> iport = ports.iterator();
 			while (iport.hasNext()) {
-				int port = ((Integer)iport.next()).intValue();
+				int port = iport.next().intValue();
 				addUDP(addr, port);
 				addTCP(addr, port);
 				System.out.println("jnamed: listening on " +
@@ -133,10 +133,10 @@ addTSIG(String algstr, String namestr, String key) throws IOException {
 
 public Cache
 getCache(int dclass) {
-	Cache c = (Cache) caches.get(new Integer(dclass));
+	Cache c = caches.get(Integer.valueOf(dclass));
 	if (c == null) {
 		c = new Cache(dclass);
-		caches.put(new Integer(dclass), c);
+		caches.put(Integer.valueOf(dclass), c);
 	}
 	return c;
 }
@@ -144,13 +144,13 @@ getCache(int dclass) {
 public Zone
 findBestZone(Name name) {
 	Zone foundzone = null;
-	foundzone = (Zone) znames.get(name);
+	foundzone = znames.get(name);
 	if (foundzone != null)
 		return foundzone;
 	int labels = name.labels();
 	for (int i = 1; i < labels; i++) {
 		Name tname = new Name(name, i);
-		foundzone = (Zone) znames.get(tname);
+		foundzone = znames.get(tname);
 		if (foundzone != null)
 			return foundzone;
 	}
@@ -184,18 +184,18 @@ addRRset(Name name, Message response, RRset rrset, int section, int flags) {
 		if (response.findRRset(name, rrset.getType(), s))
 			return;
 	if ((flags & FLAG_SIGONLY) == 0) {
-		Iterator it = rrset.rrs();
+		Iterator<Record> it = rrset.rrs();
 		while (it.hasNext()) {
-			Record r = (Record) it.next();
+			Record r = it.next();
 			if (r.getName().isWild() && !name.isWild())
 				r = r.withName(name);
 			response.addRecord(r, section);
 		}
 	}
 	if ((flags & (FLAG_SIGONLY | FLAG_DNSSECOK)) != 0) {
-		Iterator it = rrset.sigs();
+		Iterator<Record> it = rrset.sigs();
 		while (it.hasNext()) {
-			Record r = (Record) it.next();
+			Record r = it.next();
 			if (r.getName().isWild() && !name.isWild())
 				r = r.withName(name);
 			response.addRecord(r, section);
@@ -221,9 +221,9 @@ addCacheNS(Message response, Cache cache, Name name) {
 	if (!sr.isDelegation())
 		return;
 	RRset nsRecords = sr.getNS();
-	Iterator it = nsRecords.rrs();
+	Iterator<Record> it = nsRecords.rrs();
 	while (it.hasNext()) {
-		Record r = (Record) it.next();
+		Record r = it.next();
 		response.addRecord(r, Section.AUTHORITY);
 	}
 }
@@ -345,17 +345,17 @@ addAnswer(Message response, Name name, int type, int dclass,
 
 byte []
 doAXFR(Name name, Message query, TSIG tsig, TSIGRecord qtsig, Socket s) {
-	Zone zone = (Zone) znames.get(name);
+	Zone zone = znames.get(name);
 	boolean first = true;
 	if (zone == null)
 		return errorMessage(query, Rcode.REFUSED);
-	Iterator it = zone.AXFR();
+	Iterator<RRset> it = zone.AXFR();
 	try {
 		DataOutputStream dataOut;
 		dataOut = new DataOutputStream(s.getOutputStream());
 		int id = query.getHeader().getID();
 		while (it.hasNext()) {
-			RRset rrset = (RRset) it.next();
+			RRset rrset = it.next();
 			Message response = new Message(id);
 			Header header = response.getHeader();
 			header.setFlag(Flags.QR);
@@ -408,7 +408,7 @@ generateReply(Message query, byte [] in, int length, Socket s)
 	TSIGRecord queryTSIG = query.getTSIG();
 	TSIG tsig = null;
 	if (queryTSIG != null) {
-		tsig = (TSIG) TSIGs.get(queryTSIG.getName());
+		tsig = TSIGs.get(queryTSIG.getName());
 		if (tsig == null ||
 		    tsig.verify(query, in, length, null) != Rcode.NOERROR)
 			return formerrMessage(in);
